Revert "fix overflow issue + slight vertical misalignment"
This reverts commit c713441e0dda90e189a9b0bf83ebec173d0fc692.

--- a/Extensions/timestamps.css
+++ b/Extensions/timestamps.css
@@ -63,21 +63,11 @@
 }
 
 .xkit--react .xtimestamp.xtimestamp-bottom {
-	margin: 0;
+	margin: 0 auto 0 0;
 	padding: 0;
-	display: inline-block;
 }
 
-.xkit--react .xtimestamp-bottom-container {
-	flex-grow: 1;
-	flex-basis: 0;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	font-size: 1rem; /* fixes buggy behavior with old blue enabled */
-}
-
-:not(:empty) + .xtimestamp-bottom-container {
+:not(:empty) + .xtimestamp.xtimestamp-bottom {
 	margin-left: var(--post-padding);
 }
 
